--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -32,3 +32,22 @@ body {
      position: absolute;
      z-index: -1;	
 }
+
+.project {
+     margin-left: 20px;
+     background-color: #deebf7;
+     padding: 20px;
+     width: 525px;
+}
+
+p {
+    font-variant: small-caps;
+}
+
+.project p {
+    font-variant: small-caps;
+
+}
+#project1 {
+    font-variant: small-caps;
+}
